# domains-salesforce-to-dnswatch

./: .flake8  .gitignore  README.md  app.py  pyproject.toml
stacks/: constants.py
stacks/dynamodb/: __init__.py  db_tables.py
stacks/eventbridge/: __init__.py  schedule.py
stacks/json_bucket/: __init__.py  bucket.py
stacks/ssm_and_secrets/: __init__.py  params.py
stacks/state_machine/: __init__.py  invoke_lambda.py  state_machine.py  vpc.py
stacks/state_machine/lambdas/: CheckSalesforceUpdateStatus.py  FinaliseSalesforceUpdate.py  GetSalesforceChanges.py  InvokeStateMachine.py
